# Stylus-Trace

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  action.yml  commands.txt  test-profile.json  test_milestone1.sh  thresholds.toml
.github/workflows/: ci.yml  performance.yml  profile-diff.yml  release.yml
crates/stylus-trace-core/: Cargo.toml
crates/stylus-trace-core/src/: lib.rs
crates/stylus-trace-core/src/aggregator/: metrics.rs
crates/stylus-trace-core/src/commands/: capture.rs  ci.rs  diff.rs  mod.rs  models.rs
crates/stylus-trace-core/src/diff/: engine.rs  mod.rs  threshold.rs
crates/stylus-trace-core/src/flamegraph/: generator.rs  mod.rs
crates/stylus-trace-core/src/output/: mod.rs  svg.rs  viewer.rs
crates/stylus-trace-core/src/output/viewer/: index.html  viewer.css  viewer.js
crates/stylus-trace-core/src/parser/: mod.rs  schema.rs  source_map.rs
crates/stylus-trace-core/src/rpc/: types.rs
crates/stylus-trace-core/src/utils/: error.rs
crates/stylus-trace-core/tests/: aggregator_tests.rs  command_tests.rs  diff_tests.rs  flamegraph_tests.rs  output_tests.rs  parser_tests.rs  rpc_tests.rs
crates/stylus-trace-core/tests/integration/: end_to_end_test.rs
crates/stylus-trace-studio/: Cargo.toml
crates/stylus-trace-studio/src/aggregator/: metrics.rs  mod.rs  stack_builder.rs
crates/stylus-trace-studio/src/commands/: capture.rs  ci.rs  diff.rs  mod.rs  models.rs  utils.rs
crates/stylus-trace-studio/src/diff/: analyzer.rs  engine.rs  mod.rs  normalizer.rs  output.rs  schema.rs  tests.rs  threshold.rs
crates/stylus-trace-studio/src/flamegraph/: diff_generator.rs  generator.rs
crates/stylus-trace-studio/src/output/: json.rs
crates/stylus-trace-studio/src/parser/: schema.rs  source_map.rs  stylus_trace.rs
crates/stylus-trace-studio/src/rpc/: client.rs  mod.rs
crates/stylus-trace-studio/src/utils/: config.rs  error.rs
crates/stylus-trace-studio/tests/: aggregator_tests.rs  diff_tests.rs  flamegraph_tests.rs  output_tests.rs  parser_tests.rs  rpc_tests.rs
docs/: ci-cookbook.md  provider-notes.md  quickstart.md  troubleshooting.md
src/: lib.rs  main.rs
src/aggregator/: metrics.rs  mod.rs  stack_builder.rs
src/commands/: capture.rs  mod.rs  utils.rs
src/flamegraph/: generator.rs  mod.rs
src/output/: json.rs  mod.rs  svg.rs
src/parser/: hostio.rs  mod.rs  schema.rs  source_map.rs  stylus_trace.rs
src/rpc/: client.rs  mod.rs  types.rs
src/utils/: config.rs  error.rs  mod.rs
templates/education/: README.md  lesson-plan.md
templates/orbit/: README.md  orbit.env.example
templates/orbit/.github/workflows/: orbit-performance.yml
templates/starter-repo/: README.md
templates/starter-repo/.github/workflows/: performance.yml
templates/starter-repo/contracts/solidity/src/: CounterCaller.sol
templates/starter-repo/contracts/stylus-counter/: Cargo.toml
templates/starter-repo/contracts/stylus-counter/src/: lib.rs
templates/starter-repo/profiles/: current_profile.json
templates/starter-repo/scripts/: run-local-profile.sh
test_project/.github/workflows/: performance.yml
tests/: aggregator_tests.rs  command_tests.rs  flamegraph_tests.rs  output_tests.rs  parser_tests.rs
tests/fixtures/: baseline.html  baseline.json
