[workspace]
resolver = "2"
members = [
    "bin/stylus-trace",
    "crates/stylus-trace-studio",
]

[workspace.package]
version = "0.1.6"
edition = "2021"
authors = ["CreativesOnchain"]
license = "MIT"
description = "Performance profiling and flamegraph generation for Arbitrum Stylus transactions"
repository = "https://github.com/CreativesOnchain/Stylus-Trace"
homepage = "https://github.com/CreativesOnchain/Stylus-Trace"

[package]
readme = "../../README.md"


[workspace.dependencies]
stylus-trace-studio = { version = "0.1.5", path = "crates/stylus-trace-studio" }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
addr2line = "0.21"
object = { version = "0.32", features = ["wasm"] }
gimli = "0.28"
tempfile = "3.10"
pretty_assertions = "1.4"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
