[package]
name = "stylus-trace-studio"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
chrono.workspace = true
addr2line.workspace = true
object.workspace = true
gimli.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
